style(Body): add a media query to the card component to ensure it's responsive on smaller screen devices.

--- a/style.css
+++ b/style.css
@@ -123,3 +123,23 @@ main {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+@media screen and (max-width: 425px) {
+  .row {
+    max-width: 32.7rem;
+    min-height: 50rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-radius: 0.8rem;
+    overflow: hidden;
+  }
+
+  .col {
+    width: 100%;
+    height: 50rem;
+    padding: 4.8rem;
+  }
+}
